--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           jlink \
             --module-path "$JAVA_HOME/jmods" \
-            --add-modules java.base,java.desktop,java.sql,java.xml,jdk.attach \
+            --add-modules java.base,java.desktop,java.sql,java.xml,jdk.attach,jdk.crypto.ec,java.naming \
             --output package/installer-runtime \
             --strip-debug \
             --compress=2 \
